--- a/Port00/css/styles.css
+++ b/Port00/css/styles.css
@@ -6,6 +6,7 @@
     --bg-card-color: hsl(0, 0%,98%);
     --transition: color 0.1s, background-color 0.2s ease-in-out;
     --border-radius:.4em;
+    --skill-bar-length: 0%;
 }
 *{
     box-sizing: border-box;
@@ -140,6 +141,64 @@ body.dark{
     font-size: 0.9rem;
     line-height: 1.5;
 }
+.skills{
+  padding: 1em 0; 
+
+}
+.skills__item{
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+}
+.skills__bar,
+.skills__bar::after{
+    position: relative;
+    width:175px;
+    height:8px;
+    background-color:#888;
+    border-radius: var(--border-radius);
+    overflow: hidden;
+}
+.skills__bar::after{
+    content:"";
+    position: absolute;
+    left: -175px;
+    background-color: var(--primary-color);
+    transition: var(--transition);
+    animation: skills-bar-fill 2s ease-in-out forwards;
+}
+.skills__bar--90::after{
+   --skill-bar-length: 90%;
+}
+.skills__bar--80::after{
+    --skill-bar-length: 80%;
+ }
+ .skills__bar--70::after{
+    --skill-bar-length: 70%;
+ }
+ .skills__bar--60::after{
+    --skill-bar-length: 60%;
+ }
+ .skills__bar--50::after{
+    --skill-bar-length: 50%;
+ }
+ .skills__bar--40::after{
+    --skill-bar-length: 40%;
+ }
+ .skills__bar--30::after{
+    --skill-bar-length: 30%;
+ }
+ .skills__bar--20::after{
+    --skill-bar-length: 20%;
+ }
+ .skills__bar--10::after{
+    --skill-bar-length: 10%;
+ }
 .icon{
     margin-right: 1em;
+}
+@keyframes skills-bar-fill{
+    to{
+        transform: translateX(var(--skill-bar-length))
+    }
 }
