--- a/Port00/css/styles.css
+++ b/Port00/css/styles.css
@@ -2,7 +2,8 @@
 
     --primary-color: hsl(181, 79%, 70%);
     --text-color: hsl(0, 0%, 31%);
-    --bg-color: hsl(0, 0%, 90%);
+    /*--bg-color: hsl(0, 0%, 90%);*/
+    --bg-color:hsl(201, 35%, 74%);
     --bg-card-color: hsl(0, 0%,98%);
     --transition: color 0.1s, background-color 0.2s ease-in-out;
     --border-radius:.4em;
@@ -26,11 +27,19 @@ body{
     color: var(--text-color);
     transition: var(--transition);
     font-family:sans-serif;
+    background-position: attached;
 }
 body.dark{
     --text-color: hsl(0, 0%, 83%);
-    --bg-color: hsl(0, 0%, 15%);
+   /* --bg-color: hsl(0, 0%, 15%);*/
+    --bg-color: hsl(201, 35%, 37%);
     --bg-card-color: hsl(0, 0%,20%);
+}
+#particles-js{
+    height: 100vh;
+    width: 100%;
+    position:fixed;
+    z-index: -1;
 }
 
 .header{
@@ -41,6 +50,7 @@ body.dark{
     padding: 0 1.5em;
     background-color: var(--bg-card-color);
     transition: var(--transition);
+    opacity: 70%;
 
 }
 .switches {
@@ -96,6 +106,19 @@ body.dark{
 .main{
     display:grid;
     padding: 2em;
+    position: relative;
+    z-index: 99;
+}
+.arriva{
+    display:grid;
+    padding: 1em;
+    gap: 0.5em;
+    border-radius: var(--border-radius);
+    justify-content: center;
+    position: relative;
+    z-index: 99;
+    opacity: 70%;
+   
 }
 @media screen and (min-width: 720px) {
     .main{
@@ -117,6 +140,7 @@ body.dark{
     padding: 1em;
     background-color:var(--bg-card-color);
     border-radius: var(--border-radius);
+    opacity: 85%;
 }
 .card__image-container{
     min-width: 320px;
@@ -209,15 +233,18 @@ body.dark{
     padding: 6em 0 4em 0 ;
     background-color: #1d242a;
     text-align: center;
+    opacity: 80%;
 }
 
-    #footer .icons {
-        font-size: 1.25em;
-    }
+#footer .icons {
+   font-size: 1.30em;
+   cursor: pointer;
 
-        #footer .icons a {
-            color: rgba(255, 255, 255, 0.5);
-        }
+}
+
+#footer .icons a {
+    color: rgba(255, 255, 255, 0.5);
+}
 
             #footer .icons a:hover {
                 color: #fff;
