--- a/Port00/css/styles.css
+++ b/Port00/css/styles.css
@@ -50,7 +50,7 @@ body.dark{
     padding: 0 1.5em;
     background-color: var(--bg-card-color);
     transition: var(--transition);
-    opacity: 70%;
+    opacity: 90%;
 
 }
 .switches {
@@ -102,12 +102,118 @@ body.dark{
 .colors_item--orange{
     --primary-color: hsl(55, 79%, 70%);
 }
+li{
+    list-style: none;
+    margin: 0 15px;
+    
+}
+.menu{
+    transition: .4s;
+}
+
+.neon-button {
+    font-size: 20px;
+    display: inline-block;
+    cursor: pointer;
+    text-decoration: none;
+    color: var(--primary-color);
+    border: var(--primary-color) 0.125em solid;
+    padding: 7px;
+    border-radius: 0.25em;
+  
+    text-shadow: 0 0 0.125em hsl(0 0% 100% / 0.3), 0 0 0.45em currentColor;
+  
+    box-shadow: inset 0 0 0.5em 0 var(--primary-color), 0 0 0.5em 0 var(--primary-color);
+  
+    position: relative;
+}
+  
+.neon-button::before {
+    pointer-events: none;
+    content: "";
+    position: absolute;
+    background: var(--primary-color);
+    top: 120%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  
+    transform: perspective(1em) rotateX(40deg) scale(1, 0.35);
+    filter: blur(1em);
+    opacity: 0.7;
+}
+  
+.neon-button::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    box-shadow: 0 0 2em 0.5em var(--primary-color);
+    opacity: 0;
+    background-color: var(--primary-color);
+    z-index: -1;
+    transition: opacity 100ms linear;
+}
+  
+.neon-button:hover,
+.neon-button:focus {
+    color: var(--text-color);
+    text-shadow: none;
+}
+  
+.neon-button:hover::before,
+.neon-button:focus::before {
+    opacity: 1;
+}
+.neon-button:hover::after,
+.neon-button:focus::after {
+    opacity: 1;
+}
+.despliegue{
+    width:200px;
+    display:flex;
+    flex-direction: column;
+    background-color:#1d242a;
+    position: absolute;
+    top: 90px;
+    right: -4px;
+    padding:14px 0px;
+    visibility: hidden;
+    opacity: none;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 1);
+    z-index: 99;
+    transition: all 300ms ease ;
+
+}
+.menu{
+    right: -10px;
+    opacity: 90%;
+}
+.mostrar{
+    visibility: visible;
+    opacity: none;
+    top:50px;
+    z-index: 1000;
+    
+}
+
+
+nav li ul li a{
+    padding:6px;
+    display: block;
+    margin-left:14px;
+    margin-top: 10px;
+    font-size:14px;
+    text-transform:uppercase;
+}
 
 .main{
     display:grid;
     padding: 2em;
     position: relative;
-    z-index: 99;
+    z-index: 96;
 }
 .arriva{
     display:grid;
@@ -116,9 +222,13 @@ body.dark{
     border-radius: var(--border-radius);
     justify-content: center;
     position: relative;
-    z-index: 99;
-    opacity: 70%;
+    z-index: 50;
+    opacity: 50%;
    
+}
+.principal{
+    z-index: 3;
+    width: 100%;
 }
 @media screen and (min-width: 720px) {
     .main{
